--- a/src/MemoryCacheStorage.csproj
+++ b/src/MemoryCacheStorage.csproj
@@ -31,9 +31,9 @@
 
 	<!-- Versions -->
 	<PropertyGroup>
-		<Version>2.0.0</Version>
-		<AssemblyVersion>2.0.0</AssemblyVersion>
-		<FileVersion>2.0.0</FileVersion>
+		<Version>2.1.0</Version>
+		<AssemblyVersion>2.1.0</AssemblyVersion>
+		<FileVersion>2.1.0</FileVersion>
 	</PropertyGroup>
 
 	<!-- Package files -->
@@ -50,6 +50,9 @@
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
+	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="System.Runtime.Caching" Version="9.0.0-preview.7.24405.7" />
 	</ItemGroup>
 
 </Project>
